fix; align from inputs and select menu with box-sizing

--- a/src/App.css
+++ b/src/App.css
@@ -29,13 +29,15 @@
 
 input[type="text"], input[type="number"], select {
   padding: 10px;
-  margin: 10px 0;
-  width: 80%;
+  margin-bottom: 15px;
   border-radius: 5px;
   border: 1px solid #ccc;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 button {
+  width: 100%;
   background-color: #28a745;
   color: white;
   padding: 10px 20px;
